--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="api.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,15 +10,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Jokes</h1>
+    <h1>Ema-Kalkulaator</h1>
     
     <div id="container">
         
 
     </div>
 
-    <button class="nupp" id="aamen">New joke</button>
+    <button class="nupp" id="btn">Arvuta</button>
 
-    <script src="api.js"></script>
+
 </body>
 </html>
