Basic functionality working

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <div id="root"></div>
-    <select id="test">
-
+Valige amet:
+    <select id="jobSelect">
+        <option value="36">Puhastusteenindaja</option>
+        <option value="28">Ehitaja</option>
+        <option value="39">Kokk</option>
+        <option value="23">Hooldaja</option>
+        <option value="11">Õpetaja</option>
+        <option value="18">Juuksur</option>
     </select>
+Tunnid:
+<input id="testinput"></input>
+    <button id="testbutton">testbutton</button>
+    <div id="root"></div>
+    <div id="total"></div>
     <script src="app.js"></script>
 </body>
 </html>
