added more jobs + basic history function

--- a/index.html
+++ b/index.html
@@ -15,12 +15,27 @@ Valige amet:
         <option value="23">Hooldaja</option>
         <option value="11">Õpetaja</option>
         <option value="18">Juuksur</option>
+        <option value="22">Psühholoog</option>
+        <option value="13">Põetaja</option>
+        <option value="21">Teenindaja</option>
+        <option value="19">Raamatupidaja</option>
+        <option value="36">Koristaja</option>
+        <option value="39">Nõudepesija</option>
+        <option value="15">Nõustaja</option>
+        <option value="35">Autojuht</option>
+        <option value="38">Logistik</option>
+        <option value="13">Arst</option>
     </select>
 Tunnid:
 <input id="testinput"></input>
     <button id="testbutton">testbutton</button>
     <div id="root"></div>
+
+        <div id="addedtotal"></div>
+
     <div id="total"></div>
+
+    <div id="history"></div>
     <script src="app.js"></script>
 </body>
 </html>
