night shift + total added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Valige amet:
 Tunnid:
 <input id="testinput"></input>
     <button id="testbutton">testbutton</button>
+    <input type="checkbox" id="myCheck" onclick="myFunction()">öötunnid </input>
     <div id="root"></div>
 
         <div id="addedtotal"></div>
