coefficient added, variable names changed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Valige amet:
     </select>
 Tunnid:
 <input id="testinput"></input>
-    <button id="testbutton">testbutton</button>
+    <button id="button">testbutton</button>
     <input type="checkbox" id="myCheck" onclick="myFunction()">öötunnid </input>
     <div id="root"></div>
 
