Last jobs added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ Valige amet:
         <option value="35">Autojuht</option>
         <option value="38">Logistik</option>
         <option value="13">Arst</option>
+        <option value="13">Põetaja</option>
+        <option value="28">Santehnik</option>
+        <option value="36">Pesupesija</option>
+        <option value="36">Ehitus viimistleja</option>
+        <option value="23">Tugiisik</option>
     </select>
 Tunnid:
 <input id="testinput"></input>
