input field numbers only

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    
 </head>
 <body>
 Valige amet:
@@ -32,7 +33,7 @@ Valige amet:
         <option value="23">Tugiisik</option>
     </select>
 Tunnid:
-<input id="testinput"></input>
+<input type="number" id="testinput"></input>
     <button id="button">testbutton</button>
     <input type="checkbox" id="myCheck" onclick="myFunction()">öötunnid </input>
     <div id="root"></div>
